// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /Button Button in desktop screen 1`] = `
<div
  className="MuiBox-root-38 MuiBox-root-39"
>
  <div
    className="MuiBox-root-38 MuiBox-root-40"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedPrimary-50"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Hower
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-61"
  >
    <button
      className="MuiButtonBase-root-58 MuiButtonBase-disabled-59 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedPrimary-50 MuiButton-disabled-53"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-62"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedSecondary-51"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Cancel
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-63"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-text-43 MuiButton-textPrimary-44"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Back
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-64"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedPrimary-50 MuiButton-fullWidth-57"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Full Width
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components /Button Button in phone screen 1`] = `
<div
  style={
    Object {
      "width": "425px",
    }
  }
>
  <div
    className="MuiBox-root-1 MuiBox-root-2"
  >
    <div
      className="MuiBox-root-1 MuiBox-root-3"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Hower
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-24"
    >
      <button
        className="MuiButtonBase-root-21 MuiButtonBase-disabled-22 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-disabled-16"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-25"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedSecondary-14"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Cancel
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-26"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-text-6 MuiButton-textPrimary-7"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Back
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-27"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-20"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Full Width
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components /forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-442 MuiFormControl-marginNormal-443 MuiTextField-root-441"
  >
    <label
      className="MuiFormLabel-root-458 MuiInputLabel-root-446 MuiInputLabel-formControl-452 MuiInputLabel-animated-455 MuiInputLabel-shrink-454"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-478 MuiOutlinedInput-root-465 MuiInputBase-formControl-479"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-494 MuiOutlinedInput-notchedOutline-472"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-495"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-488 MuiOutlinedInput-input-473"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root-496 MuiBox-root-497"
  >
    <div
      className="makeStyles-dropdown-498"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-478 makeStyles-root-499 makeStyles-root-501"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-488 makeStyles-input-500"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-502 makeStyles-noShrink-503"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-524 MuiButtonBase-disabled-525 MuiButton-root-507 MuiButton-contained-515 MuiButton-containedPrimary-516 MuiButton-disabled-519"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-508"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-527"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root-531 makeStyles-root-528 makeStyles-root-530"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input-541 makeStyles-input-529"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-547 makeStyles-noShrink-548"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components /forms TextField 1`] = `
<div
  className="MuiBox-root-552 MuiBox-root-553"
>
  <div
    className="MuiBox-root-552 MuiBox-root-554"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-556 MuiFormControl-marginNormal-557 MuiTextField-root-555"
      >
        <label
          className="MuiFormLabel-root-572 MuiFormLabel-error-575 MuiInputLabel-error-563 MuiInputLabel-root-560 MuiInputLabel-formControl-566 MuiInputLabel-animated-569 MuiInputLabel-shrink-568"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-592 MuiOutlinedInput-root-579 MuiInputBase-error-598 MuiOutlinedInput-error-584 MuiInputBase-formControl-593"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-608 MuiOutlinedInput-notchedOutline-586"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-609"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-602 MuiOutlinedInput-input-587"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-610 MuiFormHelperText-contained-614 MuiFormHelperText-error-611"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-552 MuiBox-root-618"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-556 MuiFormControl-marginNormal-557 MuiTextField-root-555"
      >
        <label
          className="MuiFormLabel-root-572 MuiInputLabel-root-560 MuiInputLabel-formControl-566 MuiInputLabel-animated-569 MuiInputLabel-shrink-568"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-592 MuiOutlinedInput-root-579 MuiInputBase-formControl-593"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-608 MuiOutlinedInput-notchedOutline-586"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-609"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-602 MuiOutlinedInput-input-587"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-552 MuiBox-root-619"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-556 MuiFormControl-marginNormal-557 MuiTextField-root-555"
      >
        <label
          className="MuiFormLabel-root-572 MuiFormLabel-disabled-574 MuiInputLabel-disabled-562 MuiInputLabel-root-560 MuiInputLabel-formControl-566 MuiInputLabel-animated-569 MuiInputLabel-shrink-568"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-592 MuiOutlinedInput-root-579 MuiInputBase-disabled-595 MuiOutlinedInput-disabled-581 MuiInputBase-formControl-593"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-608 MuiOutlinedInput-notchedOutline-586"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-609"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-602 MuiOutlinedInput-input-587 MuiInputBase-disabled-595 MuiOutlinedInput-disabled-581"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-552 MuiBox-root-620"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-556 MuiFormControl-marginNormal-557 MuiTextField-root-555"
      >
        <label
          className="MuiFormLabel-root-572 MuiInputLabel-root-560 MuiInputLabel-formControl-566 MuiInputLabel-animated-569 MuiInputLabel-shrink-568"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-592 MuiOutlinedInput-root-579 MuiInputBase-formControl-593"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-608 MuiOutlinedInput-notchedOutline-586"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-609"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-602 MuiOutlinedInput-input-587"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root-75 MuiBox-root-76"
  >
    <p
      className="MuiTypography-root-78 MuiTypography-body1-80"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root-75 MuiBox-root-108"
    />
  </div>,
  <div
    className="MuiBox-root-75 MuiBox-root-109"
  >
    <p
      className="MuiTypography-root-78 MuiTypography-body1-80"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root-75 MuiBox-root-110"
    />
  </div>,
  <div
    className="MuiBox-root-75 MuiBox-root-111"
  >
    <p
      className="MuiTypography-root-78 MuiTypography-body1-80"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root-75 MuiBox-root-112"
    />
  </div>,
  <div
    className="MuiBox-root-75 MuiBox-root-113"
  >
    <p
      className="MuiTypography-root-78 MuiTypography-body1-80"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root-75 MuiBox-root-114"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<img
  alt="Iov Logo"
  className="makeStyles-root-115"
  src="iov-logo.png"
/>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-120 MuiBox-root-121"
>
  <div
    className="MuiBox-root-120 MuiBox-root-122"
  >
    <h4
      className="MuiTypography-root-124 MuiTypography-h4-132 MuiTypography-colorPrimary-147 makeStyles-inline-123"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-124 MuiTypography-h4-132 makeStyles-inline-123"
    >

      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-120 MuiBox-root-154"
  >
    <h6
      className="MuiTypography-root-124 MuiTypography-h6-134"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-120 MuiBox-root-155"
  />
  <div
    className="MuiBox-root-120 MuiBox-root-156"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-157"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-162 MuiBox-root-163"
  >
    <label
      className="MuiFormControlLabel-root-164"
    >
      <span
        className="MuiSwitch-root-170"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-192 MuiIconButton-root-183 MuiPrivateSwitchBase-root-179 MuiSwitch-switchBase-171 MuiSwitch-colorPrimary-172"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-191"
          >
            <span
              className="MuiSwitch-thumb-177"
            />
            <input
              className="MuiPrivateSwitchBase-input-182 MuiSwitch-input-176"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-178"
        />
      </span>
      <span
        className="MuiTypography-root-195 MuiTypography-body1-197 MuiFormControlLabel-label-169"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-162 MuiBox-root-225"
  >
    <label
      className="MuiFormControlLabel-root-164"
    >
      <span
        className="MuiSwitch-root-170"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-192 MuiIconButton-root-183 MuiPrivateSwitchBase-root-179 MuiSwitch-switchBase-171 MuiSwitch-colorPrimary-172"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-191"
          >
            <span
              className="MuiSwitch-thumb-177"
            />
            <input
              className="MuiPrivateSwitchBase-input-182 MuiSwitch-input-176"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-178"
        />
      </span>
      <span
        className="MuiTypography-root-195 MuiTypography-body1-197 MuiFormControlLabel-label-169"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root-317 MuiBox-root-318"
  >
    <div
      className="MuiBox-root-317 MuiBox-root-319"
    >
      <div
        className="MuiBox-root-317 MuiBox-root-320"
      >
        <button
          className="MuiButtonBase-root-338 MuiButton-root-321 MuiButton-contained-329 MuiButton-containedPrimary-330"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-322"
          >
            Click to generate INFO toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-342 MuiTypography-body1-344"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-342 MuiTypography-body2-343 MuiPaper-root-383 MuiPaper-elevation6-391 MuiSnackbarContent-root-380 makeStyles-info-374"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-381"
        >
          <div
            className="MuiBox-root-317 MuiBox-root-410 makeStyles-message-378"
          >
            <div
              className="makeStyles-iconBackground-379"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-411"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-342 MuiTypography-subtitle1-353 makeStyles-info-374"
            >
              Hi INFO
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-382"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-338 MuiIconButton-root-416 MuiIconButton-colorSecondary-421"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-424"
            >
              <img
                alt="Close"
                className="makeStyles-root-411"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-317 MuiBox-root-425"
    >
      <div
        className="MuiBox-root-317 MuiBox-root-426"
      >
        <button
          className="MuiButtonBase-root-338 MuiButton-root-321 MuiButton-contained-329 MuiButton-containedPrimary-330"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-322"
          >
            Click to generate WARN toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-342 MuiTypography-body1-344"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-342 MuiTypography-body2-343 MuiPaper-root-383 MuiPaper-elevation6-391 MuiSnackbarContent-root-380 makeStyles-warning-375"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-381"
        >
          <div
            className="MuiBox-root-317 MuiBox-root-427 makeStyles-message-378"
          >
            <div
              className="makeStyles-iconBackground-379"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-411"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-342 MuiTypography-subtitle1-353 makeStyles-warning-375"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-382"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-338 MuiIconButton-root-416 MuiIconButton-colorSecondary-421"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-424"
            >
              <img
                alt="Close"
                className="makeStyles-root-411"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-317 MuiBox-root-428"
    >
      <div
        className="MuiBox-root-317 MuiBox-root-429"
      >
        <button
          className="MuiButtonBase-root-338 MuiButton-root-321 MuiButton-contained-329 MuiButton-containedPrimary-330"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-322"
          >
            Click to generate ERROR toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-342 MuiTypography-body1-344"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-342 MuiTypography-body2-343 MuiPaper-root-383 MuiPaper-elevation6-391 MuiSnackbarContent-root-380 makeStyles-error-373"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-381"
        >
          <div
            className="MuiBox-root-317 MuiBox-root-430 makeStyles-message-378"
          >
            <div
              className="makeStyles-iconBackground-379"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-411"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-342 MuiTypography-subtitle1-353 makeStyles-error-373"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-382"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-338 MuiIconButton-root-416 MuiIconButton-colorSecondary-421"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-424"
            >
              <img
                alt="Close"
                className="makeStyles-root-411"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-236 MuiBox-root-237"
  >
    <div
      className="makeStyles-container-239"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-242"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-236 MuiBox-root-247"
  >
    <p
      className="MuiTypography-root-249 MuiTypography-body1-251 makeStyles-inline-248"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-239"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-242"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-280 MuiTypography-subtitle1-291 MuiTypography-colorPrimary-303"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-280 MuiTypography-h4-288"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-280 MuiTypography-subtitle1-291 MuiTypography-colorPrimary-303"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-280 MuiTypography-h5-289"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-280 MuiTypography-subtitle1-291 MuiTypography-colorPrimary-303"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-280 MuiTypography-h6-290"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-280 MuiTypography-subtitle1-291 MuiTypography-colorPrimary-303"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-280 MuiTypography-body1-282"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-280 MuiTypography-subtitle1-291 MuiTypography-colorPrimary-303"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-280 MuiTypography-body2-281"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-280 MuiTypography-subtitle1-291 MuiTypography-colorPrimary-303"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-280 MuiTypography-subtitle1-291"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-280 MuiTypography-subtitle1-291 MuiTypography-colorPrimary-303"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-280 MuiTypography-subtitle2-292"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-280 MuiTypography-subtitle1-291 MuiTypography-colorPrimary-303"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-280 MuiTypography-subtitle2-292 MuiTypography-colorPrimary-303 makeStyles-inline-279"
  >
    First part of the text.
  </h6>,
  <h6
    className="MuiTypography-root-280 MuiTypography-subtitle2-292 makeStyles-inline-279"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Routes/Login Login page 1`] = `
<div
  className="MuiBox-root-688 MuiBox-root-689"
  id="/signup1"
>
  <div
    className="MuiBox-root-688 MuiBox-root-690"
  >
    <h4
      className="MuiTypography-root-692 MuiTypography-h4-700 MuiTypography-colorPrimary-715 makeStyles-inline-691"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-692 MuiTypography-h4-700 makeStyles-inline-691"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-688 MuiBox-root-722"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-688 MuiBox-root-723"
      >
        <div
          className="MuiFormControl-root-725 MuiFormControl-marginNormal-726 MuiFormControl-fullWidth-728 MuiTextField-root-724"
        >
          <label
            className="MuiFormLabel-root-741 MuiFormLabel-required-746 MuiInputLabel-required-733 MuiInputLabel-root-729 MuiInputLabel-formControl-735 MuiInputLabel-animated-738 MuiInputLabel-shrink-737"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-747 MuiInputLabel-asterisk-734"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-761 MuiOutlinedInput-root-748 MuiInputBase-fullWidth-770 MuiInputBase-formControl-762"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-777 MuiOutlinedInput-notchedOutline-755"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-778"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-771 MuiOutlinedInput-input-756"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-688 MuiBox-root-779"
      >
        <div
          className="MuiFormControl-root-725 MuiFormControl-marginNormal-726 MuiFormControl-fullWidth-728 MuiTextField-root-724"
        >
          <label
            className="MuiFormLabel-root-741 MuiFormLabel-required-746 MuiInputLabel-required-733 MuiInputLabel-root-729 MuiInputLabel-formControl-735 MuiInputLabel-animated-738 MuiInputLabel-shrink-737"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-747 MuiInputLabel-asterisk-734"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-761 MuiOutlinedInput-root-748 MuiInputBase-fullWidth-770 MuiInputBase-formControl-762"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-777 MuiOutlinedInput-notchedOutline-755"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-778"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-771 MuiOutlinedInput-input-756"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-688 MuiBox-root-780"
      >
        <div
          className="MuiFormControl-root-725 MuiFormControl-marginNormal-726 MuiFormControl-fullWidth-728 MuiTextField-root-724"
        >
          <label
            className="MuiFormLabel-root-741 MuiFormLabel-required-746 MuiInputLabel-required-733 MuiInputLabel-root-729 MuiInputLabel-formControl-735 MuiInputLabel-animated-738 MuiInputLabel-shrink-737"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-747 MuiInputLabel-asterisk-734"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-761 MuiOutlinedInput-root-748 MuiInputBase-fullWidth-770 MuiInputBase-formControl-762"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-777 MuiOutlinedInput-notchedOutline-755"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-778"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-771 MuiOutlinedInput-input-756"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-688 MuiBox-root-781"
      >
        <div
          className="MuiBox-root-688 MuiBox-root-782"
        >
          <button
            className="MuiButtonBase-root-800 MuiButton-root-783 MuiButton-text-785 MuiButton-textPrimary-786 MuiButton-fullWidth-799"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-784"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-688 MuiBox-root-803"
        >
          <button
            className="MuiButtonBase-root-800 MuiButtonBase-disabled-801 MuiButton-root-783 MuiButton-contained-791 MuiButton-containedPrimary-792 MuiButton-disabled-795 MuiButton-fullWidth-799"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-784"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-688 MuiBox-root-804"
  />
  <div
    className="MuiBox-root-688 MuiBox-root-805"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-806"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-821 MuiBox-root-822"
  id="/signup2"
>
  <div
    className="MuiBox-root-821 MuiBox-root-823"
  >
    <h4
      className="MuiTypography-root-825 MuiTypography-h4-833 MuiTypography-colorPrimary-848 makeStyles-inline-824"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-825 MuiTypography-h4-833 makeStyles-inline-824"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-821 MuiBox-root-855"
  >
    <div
      className="MuiBox-root-821 MuiBox-root-856"
    >
      <div
        className="MuiBox-root-821 MuiBox-root-857"
      >
        <div
          className="MuiBox-root-821 MuiBox-root-858"
        >
          <h6
            className="MuiTypography-root-825 MuiTypography-subtitle2-837 makeStyles-inline-824"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-860"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-863"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-868"
      >
        <span
          className="MuiSwitch-root-874"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-896 MuiIconButton-root-887 MuiPrivateSwitchBase-root-883 MuiSwitch-switchBase-875 MuiSwitch-colorPrimary-876"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-895"
            >
              <span
                className="MuiSwitch-thumb-881"
              />
              <input
                className="MuiPrivateSwitchBase-input-886 MuiSwitch-input-880"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track-882"
          />
        </span>
        <span
          className="MuiTypography-root-825 MuiTypography-body1-827 MuiFormControlLabel-label-873"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-821 MuiBox-root-899"
    >
      <p
        className="MuiTypography-root-825 MuiTypography-body1-827 makeStyles-inline-824"
      >

      </p>
    </div>
    <div
      className="MuiBox-root-821 MuiBox-root-900"
    >
      <div
        className="MuiBox-root-821 MuiBox-root-901"
      >
        <button
          className="MuiButtonBase-root-896 MuiButton-root-902 MuiButton-text-904 MuiButton-textPrimary-905 MuiButton-fullWidth-918"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-903"
          >
            Back
          </span>
        </button>
      </div>
      <div
        className="MuiBox-root-821 MuiBox-root-919"
      >
        <button
          className="MuiButtonBase-root-896 MuiButton-root-902 MuiButton-contained-910 MuiButton-containedPrimary-911 MuiButton-fullWidth-918"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-903"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-821 MuiBox-root-920"
  />
  <div
    className="MuiBox-root-821 MuiBox-root-921"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-863"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-932 MuiBox-root-933"
  id="/signup3"
>
  <div
    className="MuiBox-root-932 MuiBox-root-934"
  >
    <h4
      className="MuiTypography-root-936 MuiTypography-h4-944 MuiTypography-colorPrimary-959 makeStyles-inline-935"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-936 MuiTypography-h4-944 makeStyles-inline-935"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-932 MuiBox-root-966"
  >
    <h6
      className="MuiTypography-root-936 MuiTypography-subtitle1-947 makeStyles-inline-935"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-932 MuiBox-root-967"
      >
        <div
          className="MuiFormControl-root-969 MuiFormControl-marginNormal-970 MuiFormControl-fullWidth-972 MuiTextField-root-968"
        >
          <div
            className="MuiInputBase-root-986 MuiOutlinedInput-root-973 MuiInputBase-fullWidth-995 MuiInputBase-formControl-987"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1002 MuiOutlinedInput-notchedOutline-980"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1003"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-996 MuiOutlinedInput-input-981"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-932 MuiBox-root-1004"
      >
        <div
          className="MuiBox-root-932 MuiBox-root-1005"
        >
          <button
            className="MuiButtonBase-root-1023 MuiButton-root-1006 MuiButton-text-1008 MuiButton-textPrimary-1009 MuiButton-fullWidth-1022"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1007"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-932 MuiBox-root-1026"
        >
          <button
            className="MuiButtonBase-root-1023 MuiButton-root-1006 MuiButton-contained-1014 MuiButton-containedPrimary-1015 MuiButton-fullWidth-1022"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-1007"
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-932 MuiBox-root-1027"
  />
  <div
    className="MuiBox-root-932 MuiBox-root-1028"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1029"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-1044 MuiBox-root-1045"
  id="/welcome"
>
  <div
    className="MuiBox-root-1044 MuiBox-root-1046"
  >
    <h4
      className="MuiTypography-root-1048 MuiTypography-h4-1056 MuiTypography-colorPrimary-1071 makeStyles-inline-1047"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-1048 MuiTypography-h4-1056 makeStyles-inline-1047"
    >

      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-1044 MuiBox-root-1078"
  >
    <p
      className="MuiTypography-root-1048 MuiTypography-body1-1050 makeStyles-inline-1047"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-1044 MuiBox-root-1079"
    />
    <button
      className="MuiButtonBase-root-1097 MuiButton-root-1080 MuiButton-contained-1088 MuiButton-containedPrimary-1089 MuiButton-fullWidth-1096"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1081"
      >
        Log in
      </span>
    </button>
    <div
      className="MuiBox-root-1044 MuiBox-root-1100"
    />
    <button
      className="MuiButtonBase-root-1097 MuiButton-root-1080 MuiButton-contained-1088 MuiButton-containedPrimary-1089 MuiButton-fullWidth-1096"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1081"
      >
        New account
      </span>
    </button>
    <div
      className="MuiBox-root-1044 MuiBox-root-1101"
    />
    <button
      className="MuiButtonBase-root-1097 MuiButton-root-1080 MuiButton-contained-1088 MuiButton-containedPrimary-1089 MuiButton-fullWidth-1096"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1081"
      >
        Import account
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1044 MuiBox-root-1102"
  />
  <div
    className="MuiBox-root-1044 MuiBox-root-1103"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1104"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
